src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Claim_held_by__c</fullName>
        <label>Claim held by</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change of Address</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Participation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Note_Unit_Claim__c</fullName>
        <label>Note/Unit/Claim</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Trade Claim</fullName>
                </value>
                <value>
                    <fullName>Unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this is a reference to the opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Purchased Claims</relationshipLabel>
        <relationshipName>Asset</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Amount__c</fullName>
        <description>this is the amount the company paid to buy this Claim</description>
        <label>Purchase Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchased_price__c</fullName>
        <description>this field is created since the standard field is not allowing the decimal.</description>
        <label>Purchased price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Schedule_ID__c</fullName>
        <label>Schedule ID</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>